[gd_scene load_steps=74 format=2]

[ext_resource path="res://Enemy_lvl1.gd" type="Script" id=1]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_000.png" type="Texture" id=2]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_001.png" type="Texture" id=3]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_002.png" type="Texture" id=4]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_003.png" type="Texture" id=5]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_004.png" type="Texture" id=6]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_005.png" type="Texture" id=7]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_006.png" type="Texture" id=8]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_007.png" type="Texture" id=9]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_008.png" type="Texture" id=10]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_009.png" type="Texture" id=11]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_010.png" type="Texture" id=12]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_011.png" type="Texture" id=13]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_012.png" type="Texture" id=14]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_013.png" type="Texture" id=15]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_014.png" type="Texture" id=16]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_015.png" type="Texture" id=17]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_016.png" type="Texture" id=18]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Idle/0_Goblin_Idle_017.png" type="Texture" id=19]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_000.png" type="Texture" id=20]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_001.png" type="Texture" id=21]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_002.png" type="Texture" id=22]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_003.png" type="Texture" id=23]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_004.png" type="Texture" id=24]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_005.png" type="Texture" id=25]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_006.png" type="Texture" id=26]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_007.png" type="Texture" id=27]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_008.png" type="Texture" id=28]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_009.png" type="Texture" id=29]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_010.png" type="Texture" id=30]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Running/0_Goblin_Running_011.png" type="Texture" id=31]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_000.png" type="Texture" id=32]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_001.png" type="Texture" id=33]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_002.png" type="Texture" id=34]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_003.png" type="Texture" id=35]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_004.png" type="Texture" id=36]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_005.png" type="Texture" id=37]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_006.png" type="Texture" id=38]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_007.png" type="Texture" id=39]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_008.png" type="Texture" id=40]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_009.png" type="Texture" id=41]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_010.png" type="Texture" id=42]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Run Slashing/0_Goblin_Run Slashing_011.png" type="Texture" id=43]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_000.png" type="Texture" id=44]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_001.png" type="Texture" id=45]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_002.png" type="Texture" id=46]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_003.png" type="Texture" id=47]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_004.png" type="Texture" id=48]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_005.png" type="Texture" id=49]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_006.png" type="Texture" id=50]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_007.png" type="Texture" id=51]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_008.png" type="Texture" id=52]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_009.png" type="Texture" id=53]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_010.png" type="Texture" id=54]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_011.png" type="Texture" id=55]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_012.png" type="Texture" id=56]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_014.png" type="Texture" id=57]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Dying/0_Goblin_Dying_013.png" type="Texture" id=58]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Loop/0_Goblin_Jump Loop_000.png" type="Texture" id=59]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Loop/0_Goblin_Jump Loop_001.png" type="Texture" id=60]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Loop/0_Goblin_Jump Loop_002.png" type="Texture" id=61]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Loop/0_Goblin_Jump Loop_004.png" type="Texture" id=62]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Loop/0_Goblin_Jump Loop_003.png" type="Texture" id=63]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Loop/0_Goblin_Jump Loop_005.png" type="Texture" id=64]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Start/0_Goblin_Jump Start_000.png" type="Texture" id=65]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Start/0_Goblin_Jump Start_001.png" type="Texture" id=66]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Start/0_Goblin_Jump Start_002.png" type="Texture" id=67]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Start/0_Goblin_Jump Start_003.png" type="Texture" id=68]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Start/0_Goblin_Jump Start_004.png" type="Texture" id=69]
[ext_resource path="res://Tiles/Enemy/Goblin/PNG/PNG Sequences/Jump Start/0_Goblin_Jump Start_005.png" type="Texture" id=70]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 19.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "run",
"speed": 19.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "swing",
"speed": 15.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 57 ), ExtResource( 57 ), ExtResource( 57 ), ExtResource( 57 ), ExtResource( 57 ), ExtResource( 57 ), ExtResource( 57 ), ExtResource( 57 ), ExtResource( 57 ), ExtResource( 57 ), ExtResource( 57 ), ExtResource( 57 ), ExtResource( 57 ) ],
"loop": true,
"name": "dead",
"speed": 19.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ) ],
"loop": true,
"name": "jump_loop",
"speed": 19.0
}, {
"frames": [ ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ) ],
"loop": true,
"name": "jump_start",
"speed": 19.0
}, {
"frames": [ ExtResource( 57 ) ],
"loop": true,
"name": "corpse",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 9.62944, 20.6797 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 96.0182, 61.0852 )

[node name="group_enemy" type="Node2D"]

[node name="Enemy_lvl1" type="KinematicBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Enemy_lvl1" index="0"]

scale = Vector2( 0.0385789, 0.0385789 )
frames = SubResource( 1 )
animation = "idle"
_sections_unfolded = [ "Transform" ]

[node name="run" type="CollisionShape2D" parent="Enemy_lvl1" index="1"]

position = Vector2( -1.21097, 1.70882 )
scale = Vector2( 0.614832, 0.462888 )
shape = SubResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="swing" type="CollisionShape2D" parent="Enemy_lvl1" index="2"]

position = Vector2( 3.75563, 1.15951 )
scale = Vector2( 0.109226, 0.152929 )
shape = SubResource( 3 )
disabled = true
_sections_unfolded = [ "Transform" ]

[node name="RayCast2D" type="RayCast2D" parent="Enemy_lvl1" index="3"]

position = Vector2( 3.84749, 0.285919 )
scale = Vector2( 0.791083, 1.00934 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 14 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Ray_right_enemy" type="RayCast2D" parent="Enemy_lvl1" index="4"]

position = Vector2( 2, 2 )
scale = Vector2( 1, 0.5 )
enabled = true
exclude_parent = true
cast_to = Vector2( 4, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Ray_left_enemy" type="RayCast2D" parent="Enemy_lvl1" index="5"]

position = Vector2( -3.98446, 2 )
scale = Vector2( 1, 0.5 )
enabled = true
exclude_parent = true
cast_to = Vector2( -4, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Timer_dead" type="Timer" parent="Enemy_lvl1" index="6"]

process_mode = 1
wait_time = 1.4
one_shot = true
autostart = false

[connection signal="animation_finished" from="Enemy_lvl1/AnimatedSprite" to="Enemy_lvl1" method="_on_AnimatedSprite_animation_finished"]

[connection signal="timeout" from="Enemy_lvl1/Timer_dead" to="Enemy_lvl1" method="_on_Timer_dead_timeout"]


